# FooDB

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt
docs/: TASK_RECIPES.md  VALIDATION.md  sql.md
gitconfig/: configure.sh  git-commit-template  pre-commit
src/: foodb.cpp
src/catalog/: row.cpp  row.h  schema.cpp  schema.h  table.cpp  table.h
src/store/: bptree.cpp  bptree.h  index.h  leaf.cpp  leaf.h  left.cpp  left.h  macro.h  node.cpp  node.h  record.cpp  record.h  sub_node.cpp  sub_node.h  trace.h
src/util/: macro.h  trace.h
test/: bpt_test.cpp
